# Rainbow-Parser

./: README.md
decode/: Makefile.am  Makefile.in  README  configure  configure.ac
decode/autom4te.cache/: output.0  traces.0  traces.1
decode/src/: AbstractHeadFinder.h  ChartFilter.h  ChartProjectionCKY.h  DepthPrinter.h  EditDistance.h  GrammarCommands.h  LPCFGSampler.h  Makefile.am  Makefile.in  MultiTreebankChartCombinationParser.h  MultiTreebankCombinationParser.h  ParseCombinationChart.h  ParseCombinationViterbi.h  PennTreebankCollinsHeadFinder.h  PrettyPrintGrammar.h  PrintRawMarginals.h  TensorGrammar.h  bags.h  cnf_io.cpp  cnf_io.h  counter.h  debug.cpp  debug.h  earley_parser.cpp  environment.h  full_lattice.h  grammar.h  hashes.h  lang_tokenizer.h  lattice.cpp  lattice.h  lpcfg_em.h  lpcfg_flatten.h  lpcfg_parser.h  main.cpp  mapper.h  marginals.h  pruner.cpp  pruner.h  rules.h  (+15 more)
example-data/: ptb-example-train.txt  ptb-example-train.txt.cmd
example-output/spectral_naacl_feat-0_rare-5_t-pos_nt-pos/: diary-18-Sep-2017 15:26:03.out  diary-18-Sep-2017 15:28:05.out  grammar-prune.txt  nonterminals.mat  train.denorm  train.denorm.final  train.denorm.final.prunegrammar  train.norm  train.toparse  train.vocab.org  train.vocab.parsing
example-output/spectral_naacl_feat-0_rare-5_t-pos_nt-pos/Clusters-kmeans/: Clusters-$-1.mat  Clusters-''-2.mat  Clusters-,-3.mat  Clusters-.-2.mat  Clusters-:-1.mat  Clusters-@NP^g-4.mat  Clusters-@NX^g-1.mat  Clusters-@PRN^g-1.mat  Clusters-@QP^g-1.mat  Clusters-@SINV^g-2.mat  Clusters-@SQ^g-1.mat  Clusters-@S^g-4.mat  Clusters-@UCP^g-1.mat  Clusters-@VP^g-3.mat  Clusters-ADJP^g-2.mat  Clusters-ADJP^g|JJ-1.mat  Clusters-ADVP^g-1.mat  Clusters-ADVP^g|RB-2.mat  Clusters-CC-2.mat  Clusters-CD-2.mat  Clusters-DT-4.mat  Clusters-FRAG^g-1.mat  Clusters-FW-1.mat  Clusters-IN-4.mat  Clusters-JJ-3.mat  Clusters-MD-2.mat  Clusters-NN-4.mat  Clusters-NNP-3.mat  Clusters-NNPS-1.mat  Clusters-NNS-3.mat  Clusters-NP^g-4.mat  Clusters-NP^g|DT-1.mat  Clusters-NP^g|JJS-1.mat  Clusters-NP^g|NN-2.mat  Clusters-NP^g|NNP-1.mat  (+31 more)
scripts/: denorm-trees.sh  lpcfgem.py  lpcfgparser.py  norm-trees.sh
train/: config.py
train/src/: java.opts  javaclasspath.txt  naacl-features-dict.txt  run_clusterestimation_algorithm.m  run_spectralestimation_algorithm.m  set_global_parameters.m
(+1700 files in other folders)
