# this is example-file: src/Makefile.am
#
# the program to build (the names of the final binaries)
bin_PROGRAMS = lpcfgparser

# list of sources for the 'helloWorld' binary
lpcfgparser_SOURCES =    cnf_io.cpp debug.cpp earley_parser.cpp grammar.cpp lattice.cpp main.cpp pruner.cpp signature.cpp utils.cpp weighted_forest.cpp
